--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Progate</title>
+    <title>Steven Page</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
@@ -19,10 +19,10 @@
     </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1>BELAJAR CODING.</h1>
-        <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
-        <p>Progate adalah platform online untuk belajar coding.</p>
-        <p>Kami menawarkan lingkungan pemograman yang lengkap untuk mempermudah Anda memulai.</p>
+        <h1>Learning and Developing</h1>
+        <h1>Learning from beginner to professional</h1>
+        <p>Steven Page is Webpage</p>
+        <p>We start altogether</p>
         <div class="btn-wrapper">
           <a href="#" class="btn signup">Daftar dengan Email</a>
           <p>atau</p>
@@ -34,7 +34,7 @@
     <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Cari tau dari mana Anda mau memulai!</h2>
+          <h2>Choose a preference</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
@@ -42,28 +42,28 @@
               <img src="https://prog-8.com/images/html/advanced/html.png">
                <p>HTML & CSS</p>
             </div>
-            <p class="txt-contents">Bahasa yang digunakan untuk membuat dan mendesain tampilan situs web Anda. </p>
+            <p class="txt-contents">Learn HTM & CSS </p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/jQuery.png">
               <p>jQuery</p>
             </div>
-            <p class="txt-contents">Library JavaScript yang cepat, kaya akan fitur, dan mudah digunakan yang menangani animasi dan permintaan Ajax.</p>
+            <p class="txt-contents">Learn JQuery</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/ruby.png">
               <p>Ruby</p>
             </div>
-            <p class="txt-contents">Bahasa dinamis, serba guna yang sederhana dan produktif. Ruby sering digunakan untuk membuat aplikasi web yang responsive.</p>
+            <p class="txt-contents">Learn Ruby</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://prog-8.com/images/html/advanced/php.png">
               <p>PHP</p>
             </div>
-            <p class="txt-contents">Bahasa skrip open source yang dapat disematkan ke dalam HTML, dan cocok untuk pengembangan web.</p>
+            <p class="txt-contents">Learn PHP</p>
           </div>
         </div>
       </div>
@@ -71,8 +71,8 @@
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Apakah Anda siap untuk menjadi programer yang handal?</h2>
-          <h3>Ayo belajar coding, ayo belajar menjadi lebih kreatif!</h3>
+          <h2>Do you ready to learn?</h2>
+          <h3>Let's go to become standout</h3>
         </div>
         <span class="btn message">Mulai Belajar</span>
       </div>
