--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+          <img class="logo" src="C:\Users\ASUS\Downloads\pic_page-0001 (4).jpg">
         </div>
         <div class="header-right">
           <a href="#" class="login">Log in</a>
@@ -19,51 +19,39 @@
     </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1>Learning and Developing</h1>
-        <h1>Learning from beginner to professional</h1>
-        <p>Steven Page is Webpage</p>
+        <h1>With Delicious Taste and Texture</h1>
+        <h1>We Present Various Chocolate Quality</h1>
+        <p>The stuff are processed by sterile and shopisticated machine</p>
         <p>We start altogether</p>
-        <div class="btn-wrapper">
-          <a href="#" class="btn signup">Daftar dengan Email</a>
-          <p>atau</p>
-          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Daftar dengan Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Daftar dengan Twitter</a>
-        </div>
-      </div>
-    </div>
     <div class="lesson-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Choose a preference</h2>
+          <h2>Choose your favours</h2>
         </div>
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/html.png">
-               <p>HTML & CSS</p>
+              <img src="C:\Users\ASUS\Downloads\download.jfif">
             </div>
-            <p class="txt-contents">Learn HTM & CSS </p>
+            <p class="txt-contents">Chocolate Vanilla</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-              <p>jQuery</p>
+              <img src="C:\Users\ASUS\Downloads\images.jfif">
             </div>
-            <p class="txt-contents">Learn JQuery</p>
+            <p class="txt-contents">Chocolate Peanut</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/ruby.png">
-              <p>Ruby</p>
+              <img src="C:\Users\ASUS\Downloads\download (1).jfif">
             </div>
-            <p class="txt-contents">Learn Ruby</p>
+            <p class="txt-contents">Chocolate Rasberry</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/php.png">
-              <p>PHP</p>
+              <img src="C:\Users\ASUS\Downloads\download (2).jfif">
             </div>
-            <p class="txt-contents">Learn PHP</p>
+            <p class="txt-contents">Chocolate Belgian</p>
           </div>
         </div>
       </div>
@@ -71,24 +59,17 @@
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Do you ready to learn?</h2>
-          <h3>Let's go to become standout</h3>
+          <h2>What we have?</h2>
+          <h3>Let's go taste them</h3>
         </div>
-        <span class="btn message">Mulai Belajar</span>
+        <span class="btn message">Search your flavours</span>
       </div>
     </div>
     <footer>
       <div class="container">
-        <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-        <p>Learn to code, learn to be creative.</p>
+        <center><img src="C:\Users\ASUS\Downloads\pic_page-0001 (4).jpg"></center>
+        <p><sup>©</sup>Harry Asmara Chocos and Beverages Inc.</p>
       </div>
-      <form>
-        Select a file: <input type="file"
-        name="reference"> <br>
-        <div class="button-wrapper">
-          <div class="container"></div>
-        <input type="submit">
-      </form>
     </footer>
   </body>
 </html>
