--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="C:\Users\ASUS\Downloads\pic_page-0001 (4).jpg">
+          <img class="logo" src="./C:\Users\ASUS\Downloads\pic_page-0001 (4).jpg">
         </div>
         <div class="header-right">
           <a href="#" class="login">Log in</a>
@@ -31,25 +31,25 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="C:\Users\ASUS\Downloads\download.jfif">
+              <img src="./C:\Users\ASUS\Downloads\download.jfif">
             </div>
             <p class="txt-contents">Chocolate Vanilla</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="C:\Users\ASUS\Downloads\images.jfif">
+              <img src="./C:\Users\ASUS\Downloads\images.jfif">
             </div>
             <p class="txt-contents">Chocolate Peanut</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="C:\Users\ASUS\Downloads\download (1).jfif">
+              <img src="./C:\Users\ASUS\Downloads\download (1).jfif">
             </div>
             <p class="txt-contents">Chocolate Rasberry</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="C:\Users\ASUS\Downloads\download (2).jfif">
+              <img src="./C:\Users\ASUS\Downloads\download (2).jfif">
             </div>
             <p class="txt-contents">Chocolate Belgian</p>
           </div>
@@ -67,7 +67,7 @@
     </div>
     <footer>
       <div class="container">
-        <center><img src="C:\Users\ASUS\Downloads\pic_page-0001 (4).jpg"></center>
+        <center><img src="./C:\Users\ASUS\Downloads\pic_page-0001 (4).jpg"></center>
         <p><sup>©</sup>Harry Asmara Chocos and Beverages Inc.</p>
       </div>
     </footer>
