--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="./C:\Users\ASUS\Downloads\download.jfif">
+              <img src="https://photos.google.com/album/AF1QipNI2NGKEDJ-yZ_9l14W4QrcEKr-NujKsyThO66F/photo/AF1QipMnaHjhwj9UAyTjL7uYdxvNvBtbX2dTPdv4eefZ">
             </div>
             <p class="txt-contents">Chocolate Vanilla</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="./C:\Users\ASUS\Downloads\images.jfif">
+              <img src="https://photos.google.com/album/AF1QipOEQgTjLWyRD85T3hZV8JCRjpjPam7b0pnn18d7/photo/AF1QipMWq4FZczyQpt7rMU0dvt0JmtMVbSvtVwsbFxl-">
             </div>
             <p class="txt-contents">Chocolate Peanut</p>
           </div>
