--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://photos.google.com/album/AF1QipNI2NGKEDJ-yZ_9l14W4QrcEKr-NujKsyThO66F/photo/AF1QipMnaHjhwj9UAyTjL7uYdxvNvBtbX2dTPdv4eefZ">
+              <img src="https://www.screencast.com/t/r2ofSjTWx">
             </div>
             <p class="txt-contents">Chocolate Vanilla</p>
           </div>
