--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://www.screencast.com/t/r2ofSjTWx">
+              <img src="C:\Users\ASUS\Downloads\IMG_20220425_153540_981.jpg">
             </div>
             <p class="txt-contents">Chocolate Vanilla</p>
           </div>
